--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.0",
     "gulp-data": "^1.2.1",
+    "gulp-dom": "^0.8.0",
     "gulp-file-include": "^0.13.7",
     "gulp-imagemin": "^2.4.0",
     "gulp-less": "^3.0.5",
@@ -18,6 +19,8 @@
     "gulp-rimraf": "^0.2.0",
     "gulp-template": "^3.1.0",
     "imagemin-pngquant": "^4.2.2",
+    "markdown-it-container": "^2.0.0",
+    "mermaid": "^0.5.8",
     "yamljs": "^0.2.5"
   },
   "scripts": {
